--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <a style="font-size:50px" href="komp.html"> KOMP</a>
         <a style="font-size:50px" href="stacjonarny.html"> PC</a>
-        <a style="font-size:50px" href="telefon.html"> TEKEFON</a>
+        <a style="font-size:50px" href="telefon.html"> TELEFON</a>
         <a style="font-size:50px" href="bajka.html"> BAJKA</a>
 
 
